modified base, name, repo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://dominik-1058.github.io/wedding-invitation",
-  "name": "wedding-invitation",
+  "homepage": "https://iris-calvin.github.io/Wir-heiraten-2025",
+  "name": "wir-heiraten-2025",
   "private": true,
   "version": "0.0.0",
   "type": "module",
