--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://iris-calvin.github.io/Wir-heiraten-2025",
-  "name": "wir-heiraten-2025",
+  "name": "Wir-heiraten-2025",
   "private": true,
   "version": "0.0.0",
   "type": "module",
