--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dropbox": "^10.34.0",
     "embla-carousel-react": "^7.1.0",
     "express-rate-limit": "^7.5.0",
+    "isomorphic-fetch": "^3.0.0",
     "motion": "^12.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
