--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-dom": "^18.3.1",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-router-dom": "^7.1.3",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "yet-another-react-lightbox": "^3.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
